Fixed margin issue that caused whitespace on top of app

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   display: flex;
   text-align: center;
+  margin: auto;
 }
 
 .opaque {
